# pas_lab1

./: .gitignore  CMakeLists.txt
include/: mdp.hpp~
include/mdp/: action.hpp  action.hpp~  mdp.hpp  policy.hpp  state.hpp
src/: action.cpp  action.cpp~  main.cpp  main.cpp~  mdp.cpp  policy.cpp  state.cpp  state.hpp~
